Reduced #last-name font-size to prevent overflow in certain browsers

--- a/css/resume-masonry.scss
+++ b/css/resume-masonry.scss
@@ -187,7 +187,7 @@ footer {
 }
 #last-name {
 	top: -120px;
-	font-size: 100px;
+	font-size: 98px;
 }
 #content {
 	position: relative;
